--- a/Dragonlance/Dragonlance.csproj
+++ b/Dragonlance/Dragonlance.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\names.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Data\names.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.9" />
   </ItemGroup>
 
