--- a/Dragonlance/Dragonlance.csproj
+++ b/Dragonlance/Dragonlance.csproj
@@ -10,7 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Data\names.txt" />
+    <Content Include="Data\names.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
